--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
-                alt="Project 1"
+                src="./assets/แมว.webp"
+                alt="cat"
                 class="project-img"
               />
             </div>
@@ -288,7 +288,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/หมา.jpg"
                 alt="Project 2"
                 class="project-img"
               />
@@ -312,7 +312,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/หมาแมว.jpg"
                 alt="Project 3"
                 class="project-img"
               />
